# MathLib

./: .gitignore  CMakeLists.txt  TODO.md
include/: Matrix3.hpp  Quaternion.hpp  Vector2.hpp  Vector3.hpp
include/MathLib/: Core.h  Matrix.hpp  Matrix2.hpp  Matrix4.hpp  MatrixClipSpace.hpp  MatrixTransform.hpp  Vector4.hpp
include/math/: Core.h  Math.hpp  Matrix.hpp  Matrix2.hpp  Matrix2x2.hpp  Matrix3.hpp  Matrix3x3.hpp  Matrix4.hpp  Matrix4x4.hpp  MatrixClipSpace.hpp  MatrixN.hpp  MatrixNxN.hpp  MatrixNxN.tpp  MatrixTransform.hpp  Quaternion.hpp  QuaternionD.hpp  Vector.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
lib/Debug/: MathLibrary.lib
lib/Win32/Debug/: MathLib.exp  MathLib.lib  MathLibs.lib
lib/Win32/Release/: MathLib.exp  MathLib.lib  MathLibs.lib
lib/x64/Debug/: MathLib.exp  MathLib.lib  MathLibs.lib
lib/x64/Release/: MathLib.exp  MathLibs.lib
src/: CMakeLists.txt  Core.h  Math.cpp  Math.hpp  Matrix.hpp  Matrix2x2.cpp  Matrix2x2.hpp  Matrix3.hpp  Matrix3x3.cpp  Matrix3x3.hpp  Matrix4x4.cpp  Matrix4x4.hpp  MatrixClipSpace.hpp  MatrixN.hpp  MatrixNxN.cpp  MatrixNxN.hpp  MatrixTransform.hpp  Quaternion.cpp  Quaternion.hpp  QuaternionD.cpp  QuaternionD.hpp  Vector.hpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp  Vector4.cpp  Vector4.hpp
